sumo/tests/sumo/extended/emitter/errors/routedist/empty_prob/errors.sumo
Warning: Emitter are deprecated; use departpos/departspeed within routes instead.
Error: Attribute 'probability' in definition of emitter/routedistelem 'emitter' is empty.
Quitting (on error).
